@@ -197,6 +197,13 @@ class BuildMaster(service.MultiService):
             return # sorry unit tests
         f.close()
         return d # for unit tests
+    
+    def validate_status(self):
+        """
+        Check if there are
+        Bug: 1684
+        """
+        pass
 
     def loadConfig(self, f, checkOnly=False):
         """Internal function to load a specific configuration file. Any
@@ -376,8 +383,10 @@ class BuildMaster(service.MultiService):
                 assert interfaces.IChangeSource(s, None)
             self.checkConfig_Schedulers(schedulers)
             assert isinstance(status, (list, tuple))
+            
             for s in status:
-                assert interfaces.IStatusReceiver(s, None)
+                assert interfaces.IStatusReceiver.providedBy(s)
+                s.checkConfig(status)
 
             slavenames = [s.slavename for s in slaves]
             buildernames = []
