@@ -82,6 +82,9 @@ class StatusReceiver:
 
     def slaveDisconnected(self, slaveName):
         pass
+    
+    def checkConfig(self, otherStatusReceivers):
+        pass
 
 class StatusReceiverMultiService(StatusReceiver, service.MultiService,
                                  util.ComparableMixin):
