@@ -5,6 +5,11 @@ Major User visible changes in Buildbot.             -*- outline -*-
 
 * Next Version
 
+** Any status providers should provide a checkConfig(all_statuses): method
+
+This is to verify at startup that there are no conflicting status
+configurations.
+
 ** EC2 instances are now terminated instead of stopped.
 
 This is really only relevant for EBS-backed instances, as Buildbot will now
